<resources>
    <string name="app_name">CalendarApp</string>
    <string name="registerString">Register</string>
    <string name="email">Email</string>
    <string name="name">Full Name</string>
    <string name="minimumPassword">Password too short, enter minimum 6 characters!</string>
    <string name="authFailed">Authentication failed, check your email and password or sign up</string>
    <string name="newPass">New Password</string>
    <string name="loginString">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btnRegister">Not a member? Register!</string>
    <string name="btnLogin">Already registered. Login Me!</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_send">Send</string>
    <string name="btn_sign_out">Sign Out</string>
</resources>
